# ProtTestTask

FirstProg/: CMakeLists.txt
FirstProg/src/: ascii_handler.cpp  ascii_handler.h  buffer_with_signals.cpp  buffer_with_signals.h  buffer_with_signals_interface.h  data_handler_interface.h  main.cpp
FirstProg/src/data_getter/: data_console_reciever.cpp  data_console_reciever.h  data_getter.cpp  data_getter.h  data_handler.cpp  data_handler.h
FirstProg/src/data_getter/interfaces/: data_reciever_interface.h
FirstProg/src/data_sender/: data_console_printer.cpp  data_console_printer.h  data_handler_for_tcp.cpp  data_handler_for_tcp.h  data_sender.cpp  data_sender.h  data_tcp_transmitter.cpp  data_tcp_transmitter.h
FirstProg/src/data_sender/interfaces/: data_transmit_interface.h
SecondProg/: CMakeLists.txt
SecondProg/src/: main.cpp
